Restored similar perfs

--- a/minimax.tex
+++ b/minimax.tex
@@ -151,7 +151,7 @@ Our approach permits to compare experimentally strategies that question the chai
 Second, the quality of the recommendation increases faster than linearly with the number of questions, 
 after an initial phase with almost no increase in quality, before slowing down and converging to an optimal recommendation. %; so it is possible to stop the elicitation early and to pick a near-optimal recommendation.
 %after only a few questions (the first few questions yield no increase in quality), so it .
-Third, we experimentally find out that asking questions only to the agents performs almost as good than interleaving questions both to the agents and the chair, although questions to the chair do have a positive value in terms of quality of the recommendation.
+Third, we experimentally find out that asking questions only to the agents performs similarly to asking questions both to the agents and the chair, although questions to the chair do have a positive value in terms of quality of the recommendation.
 %the value of information of one question to the chair is similar to the value of information of one question to a agent (in the ranges we considered), up to a certain proportion of questions asked to the chair. 
 Knowing this permits to choose the questioning strategy wisely depending on the estimated cost of each kind of question, which depends on the application. 
 
